# PicoPie

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE  PLAN.md  README.md  ROADMAP.md  build-constraints.txt  mkdocs.yml  pyproject.toml  sbom.cdx.json  setup.py
.github/workflows/: wheels.yml
benchmarks/: history.jsonl
docs/: api.md  gallery.md  guide.md  index.md  quickstart.md
docs/tutorials/: QuickLearn.md
docs/tutorials/advanced/: 01-performance.md  02-reliability.md  03-viewer.md  04-web-viewer.md
docs/tutorials/novice/: 01-setup.md  02-first-shapes.md  03-booleans-and-export.md
docs/tutorials/shapes/: 01-parametric-shapes.md  02-frames-and-spines.md  03-lattices-and-implicits.md
examples/: fields_and_io.py  hello_picogk.py  hello_picopie.py  viewer_demo.py  visualize.py
examples/shapekernel/: gallery.py
examples/web/: demo.py
parity/: PicoGKParity.csproj  Program.cs
parity-shapekernel/: PicoGKShapeKernelParity.csproj  Program.cs
scripts/: benchmark_fastloop.py  build_runtime.sh  ci_check.py  cibw_before_all_linux.sh  cibw_before_all_macos.sh  cibw_before_all_windows.ps1  fuzz_abort.py  gen_build_constraints.py  gen_csharp_golden.sh  gen_sbom.py  gen_shapekernel_golden.sh  patch_runtime.py  perf_trend.py  smoke_test.py  stage_runtime.py  voxel_size_sweep.py
src/picogk/: __init__.py  _base.py  _errors.py  _fast.py  fields.py  lattice.py  library.py  mesh.py  metadata.py  polyline.py  types.py  vdb.py  viewer.py  viz.py  voxels.py
src/picogk/_assets/: web_viewer.js
src/picogk/_native/: _gen_prototypes.py  ctypes_types.py  loader.py  prototypes.py  runtime.py
src/picogk/_native/headers/: PicoGK.h
src/picogk/shapes/: __init__.py  _base.py  bisection.py  box.py  colors.py  cylinder.py  formulas.py  frames.py  functions.py  grids.py  implicits.py  lattice_shapes.py  lens.py  logobox.py  measure.py  mesh_utils.py  modulations.py  painter.py  pipe.py  revolve.py  ring.py  sphere.py  splines.py
src/picogk/web/: __init__.py
src/picopie/: __init__.py  _errors.py  _fast.py  _fastloop.pyx  fields.py  library.py  metadata.py  polyline.py  vdb.py  viewer.py  voxels.py
src/picopie/_assets/: web_viewer.js
src/picopie/_native/: _gen_prototypes.py  loader.py  prototypes.py  runtime.py
src/picopie/_native/headers/: PicoGKApiTypes.h
src/picopie/shapes/: __init__.py  _base.py  box.py  colors.py  cylinder.py  decimation.py  functions.py  io_utils.py  lattice_shapes.py  lists.py  mesh_utils.py  modulations.py  painter.py  pipe.py  spline_ops.py  vectors.py
src/picopie/web/: __init__.py
tests/: conftest.py  test_active_values_fast.py  test_api_coverage.py  test_api_extras.py  test_core.py  test_coverage_gaps.py  test_examples.py  test_fastloop.py  test_fuzz.py  test_hardening.py  test_native_callback.py  test_parity_csharp.py  test_parity_shapekernel.py  test_perf.py  test_phase1.py  test_phase1_coverage.py  test_shapes_colors.py  test_shapes_coverage.py  test_shapes_gaps.py  test_shapes_lattice.py  test_shapes_math.py  test_shapes_measure.py  test_shapes_solids.py  test_shapes_spined.py  test_shapes_splines.py  test_shapes_validation.py  test_validation_guards.py  test_viewer.py  test_viz.py  test_voxel_size_sweep.py  test_web.py
tests/golden/: csharp_parity.json  csharp_sphere.vdb  shapekernel_parity.json
