[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3"]
build-backend = "setuptools.build_meta"

[project]
name = "picopie"
version = "0.1.0.dev0"
description = "A Pythonic binding for the PicoGK computational-geometry kernel"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "PicoPie contributors" }]
keywords = ["geometry", "voxels", "openvdb", "implicit", "cad", "additive-manufacturing"]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
viz = ["pillow>=9", "matplotlib>=3.5"]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.24"]
dev = ["pytest>=7", "pytest-timeout", "pillow>=9", "matplotlib>=3.5"]

[project.urls]
"PicoGK (upstream)" = "https://github.com/leap71/PicoGK"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
picogk = ["py.typed", "_native/headers/*.h", "_lib/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.cibuildwheel]
# Build CPython 3.10-3.13; skip musl (OpenVDB build is painful there) and PyPy.
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux* pp*"
build-frontend = "build"
# Per-Python: re-stage the runtime built once in before-all into the package.
before-build = "python {project}/scripts/stage_runtime.py"
# Wheel must work standalone: bundled runtime + compiled extension + real geometry.
test-requires = ["pytest", "numpy", "pillow", "matplotlib"]
test-command = "python {project}/scripts/ci_check.py && python -m pytest {project}/tests"
# cibuildwheel auto-repairs (auditwheel/delocate/delvewheel), vendoring the
# dlopen'd runtime's deps -- verified locally that auditwheel handles _lib/picogk.so.

[tool.cibuildwheel.linux]
before-all = "bash {project}/scripts/cibw_before_all_linux.sh"
manylinux-x86_64-image = "manylinux_2_34"

[tool.cibuildwheel.macos]
before-all = "bash {project}/scripts/cibw_before_all_macos.sh"

[tool.cibuildwheel.windows]
before-all = "powershell {project}/scripts/cibw_before_all_windows.ps1"
# delvewheel may need --add-path for the dlopen'd picogk.dll's deps:
# repair-wheel-command = "delvewheel repair --add-path native/PicoGKRuntime/build -w {dest_dir} {wheel}"
