[build-system]
requires = ["setuptools>=77", "wheel", "Cython>=3", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "picopie"
version = "0.1.0.dev0"
description = "A Pythonic binding for the PicoGK computational-geometry kernel"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Mohammadreza Hajianpour", email = "hajianpour.mr@gmail.com" },
    { name = "Vish Vadlamani", email = "global.takeover7@gmail.com" },
]
keywords = ["geometry", "voxels", "openvdb", "implicit", "cad", "additive-manufacturing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
viz = ["pillow>=9", "matplotlib>=3.5"]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.24"]
dev = ["picopie[viz]", "pytest>=7", "pytest-timeout", "pytest-cov", "ruff>=0.6", "mypy>=1.8"]

[project.urls]
"PicoGK (upstream)" = "https://github.com/leap71/PicoGK"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
picogk = ["py.typed", "_native/headers/*.h", "_lib/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["picogk"]
omit = [
    "*/picogk/_native/_gen_prototypes.py",  # build-time codegen tool, not shipped runtime
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    'if __name__ == .__main__.:',
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
src = ["src"]
# generated file (by _gen_prototypes.py); native/ is vendored upstream
extend-exclude = ["native", "src/picogk/_native/prototypes.py"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
files = ["src/picogk"]
# Target the dev/runtime interpreter; numpy's stubs require >=3.12. Source stays
# 3.10-compatible at runtime via `from __future__ import annotations`.
python_version = "3.12"
ignore_missing_imports = true
# The ctypes boundary is inherently dynamic; don't require full typing there.
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.cibuildwheel]
# Build CPython 3.10-3.13; skip musl (OpenVDB build is painful there) and PyPy.
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux*"
build-frontend = "build"
# Per-Python: re-stage the runtime built once in before-all into the package.
before-build = "python {project}/scripts/stage_runtime.py"
# Wheel must work standalone: bundled runtime + compiled extension + real geometry.
test-requires = ["pytest", "numpy", "pillow", "matplotlib"]
test-command = "python {project}/scripts/ci_check.py && python -m pytest {project}/tests"
# cibuildwheel auto-repairs (auditwheel/delocate/delvewheel), vendoring the
# dlopen'd runtime's deps -- verified locally that auditwheel handles _lib/picogk.so.

[tool.cibuildwheel.linux]
before-all = "bash {project}/scripts/cibw_before_all_linux.sh"
# full image ref (the action's pinned cibuildwheel doesn't resolve the bare alias)
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:latest"

[tool.cibuildwheel.macos]
before-all = "bash {project}/scripts/cibw_before_all_macos.sh"
# Homebrew deps (boost/tbb/blosc/icu/...) are built for the runner OS (macOS 14),
# so the wheel must target 14.0; this also satisfies TBB's C++17 aligned new/delete.
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0" }

[tool.cibuildwheel.windows]
before-all = "powershell {project}/scripts/cibw_before_all_windows.ps1"
# delvewheel may need --add-path for the dlopen'd picogk.dll's deps:
# repair-wheel-command = "delvewheel repair --add-path native/PicoGKRuntime/build -w {dest_dir} {wheel}"
